mise en place rapide de la structure html et fonction de changement de mdp #17

--- a/pfirst/src/app/info-settings/info-settings.component.css
+++ b/pfirst/src/app/info-settings/info-settings.component.css
@@ -12,3 +12,26 @@
 {
   color: #3f77dc;
 }
+
+#infoContainer
+{
+  position: absolute;
+  top: 200px;
+  left: 200px;
+}
+
+#mdpContainer
+{
+  width: 460px;
+  height: auto;
+  position: absolute;
+  top: 200px;
+  left: 1200px;
+}
+
+#showMdpContainer
+{
+  position: absolute;
+  top: 200px;
+  left: 1200px;
+}
