--- a/pfirst/src/app/courses-single/courses-single.component.html
+++ b/pfirst/src/app/courses-single/courses-single.component.html
@@ -19,6 +19,10 @@
         <td>Courses</td>
       </tr>
       <tr>
+        <td><h2>Ville</h2></td>
+        <td>{{City}}</td>
+      </tr>
+      <tr>
         <td><h2>Quand :</h2></td>
         <td>{{DispoJour}} a {{DispoHeure}}</td>
       </tr>
