--- a/pfirst/src/app/new-courses/new-courses.component.html
+++ b/pfirst/src/app/new-courses/new-courses.component.html
@@ -96,6 +96,16 @@
               </form>
             </div>
           </div>
+          <div class="jumbotron" id="formulaire">
+          <div class="form-group">
+            <label for ="city" ><h2>Ville ou vous trouvez</h2></label>
+            <input type="text" id="city" class="form-control" formControlName="city">
+            
+              <label for ="adress" ><h2>Votre adresse</h2></label>
+              <input type="text" id="adress" class="form-control" formControlName="adress">
+            </div>
+          </div>
+
           <!--#############COMMENTAIRES######################-->
           <div class="jumbotron" id="formulaire">
             <div class="form group">
