Mise en place de l'environnement pour afficher le nb de vus #21

--- a/pfirst/src/app/cuisine-single/cuisine-single.component.html
+++ b/pfirst/src/app/cuisine-single/cuisine-single.component.html
@@ -46,6 +46,7 @@
   <table align="center">
     <button id="button_rendre" type="button" class="btn btn-warning">Aider {{User}} !</button>
   </table>
+  <p><b>View : {{View}}</b></p>
 </div>
 
 
