Fonction updateView créée [à tester avec BACK] #21

--- a/pfirst/src/app/cuisine-single/cuisine-single.component.html
+++ b/pfirst/src/app/cuisine-single/cuisine-single.component.html
@@ -46,7 +46,19 @@
   <table align="center">
     <button id="button_rendre" type="button" class="btn btn-warning">Aider {{User}} !</button>
   </table>
-  <p><b>View : {{View}}</b></p>
+
+  <!--#####NOMBRES DE VUES####-->
+  <div id="view">
+    <img style="width:50px;
+    position:absolute;
+    left:200px;"
+         id="viewPic" src="../../assets/data/view.png" alt="">
+    <span style="position: absolute;
+                 left:265px;
+                 bottom: 713px;
+                 font-size: 25px">{{View}}</span>
+  </div>
+
 </div>
 
 
