--- a/pfirst/src/app/cuisine-single/cuisine-single.component.html
+++ b/pfirst/src/app/cuisine-single/cuisine-single.component.html
@@ -1,3 +1,9 @@
+
+<div *ngIf="applied" class="alert alert-dismissable alert-success">
+  <table align="center">
+    Votre demande d'aide a bien été envoyé à <b>{{User}}</b>, attendez son acceptation.
+  </table>
+</div>
 <br>
 
 <table align="center">
@@ -43,9 +49,14 @@
     </div>
   </div>
 
+  <!-- ###PROPOSER SON AIDE### -->
   <table align="center">
-    <button id="button_rendre" type="button" class="btn btn-warning"><p style="font-size: larger">Aider {{User}} !</p>
-    </button>
+    <button *ngIf="!applied" id="button_rendre" type="button" class="btn btn-warning" (click)="applyCuisine()">
+      <p style="font-size: larger">Aider {{User}} !</p></button>
+
+      <button *ngIf="applied" [disabled]="true" id="button_rendre" type="button" class="btn btn-warning" (click)="applyCuisine()">
+        <p style="font-size: larger">Vous avez proposé votre aide.</p>
+      </button>
   </table>
 </div>
 
