--- a/pfirst/src/app/app-view/app-view.component.html
+++ b/pfirst/src/app/app-view/app-view.component.html
@@ -22,40 +22,17 @@
 </div>
 
 
-<!-- petites cartes résumé -->
-<div id="partie-inf">
-  <table align="center" cellpadding="100">
-    <div id="annonces">
-      <tr>
-        <td>
-          <app-annonce-courte
-            [image]="annonces[0]['image']"
-            [helped]="annonces[0]['user']"
-            [date]="annonces[0]['date']"
-            [service]="annonces[0]['name']">
-          </app-annonce-courte>
-        </td>
-        <td>
-          <app-annonce-courte
-            [image]="annonces[1]['image']"
-            [helped]="annonces[1]['user']"
-            [date]="annonces[1]['date']"
-            [service]="annonces[1]['service']">
-          </app-annonce-courte>
-        </td>
-        <td>
-              <app-annonce-courte
-                [image]="annonces[2]['image']"
-                [helped]="annonces[2]['user']"
-                [date]="annonces[2]['date']"
-                [service]="annonces[2]['service']">
-              </app-annonce-courte>
-        </td>
-      </tr>
+<!-- INEED C'EST QUOI ?-->
+<img id="IneedCQ" src="../../assets/data/ACCUEIL/ineedCQ.png" alt="">
+<img id="pile" src="../../assets/data/ACCUEIL/pile.png" alt="">
+<img id="sep" src="../../assets/data/ACCUEIL/separ.png" alt="">
+<p id="textIn"> Autre absurdité, renouvelée du stoïcisme, et tous deux perpétuaient leur plaisanterie. Sapristi, en voilà déjà un de mort. Chouette journée pour une petite gueuse ; et quant à ce que je compris que j'avais remarquée.</p>
 
-    </div>
+<!-- AIDER QLQ -->
+<img id="tuveux" src="../../assets/data/ACCUEIL/tuVeux.png" alt="">
+<img id="jetCourse" src="../../assets/data/ACCUEIL/jetonCourse.png" alt="">
+<p id="aBesoin"><b>Gabriel a besoin de toi !</b></p>
+<p id="textTV"> Autre absurdité, renouvelée du stoïcisme, et tous deux perpétuaient leur plaisanterie. Sapristi, en voilà déjà un de mort. Chouette journée pour une petite gueuse ; et quant à ce que je compris que j'avais remarquée.</p>
 
-  </table>
-</div>
-
+<div id="space">.</div>
 
