--- a/pfirst/src/app/info-settings/info-settings.component.css
+++ b/pfirst/src/app/info-settings/info-settings.component.css
@@ -35,3 +35,15 @@
   top: 200px;
   left: 1200px;
 }
+#info
+{
+  width: 25px;
+  height: 25px;
+}
+
+#text_info
+{
+  font-size: 20px;
+  font-weight: lighter;
+  font-family: -apple-system;
+}
