Récupération des services OK, lecture de 'content' pasOK, route getANnounceByID pasOK #25

--- a/pfirst/src/app/propose/propose.component.html
+++ b/pfirst/src/app/propose/propose.component.html
@@ -20,7 +20,7 @@
                       [serviceDescription]="service.content.description"
                       [serviceImage]="service.content.image"
                       [index]="i"
-                      [id]="service.id"
+                      [id]="service.idAnnounce"
                       [serviceDate]="service.content.datejour" >
             </app-service>
           </div>
@@ -34,7 +34,7 @@
             [serviceDescription]="service.content.description"
             [serviceImage]="service.content.image"
             [index]="i"
-            [id]="service.id"
+            [id]="service.idAnnounce"
             [serviceDate]="service.content.datejour" >
           </app-service>
           </div>
@@ -47,7 +47,7 @@
             [serviceDescription]="service.content.description"
             [serviceImage]="service.content.image"
             [index]="i"
-            [id]="service.id"
+            [id]="service.idAnnounce"
             [serviceDate]="service.content.datejour" >
           </app-service>
           </div>
@@ -58,7 +58,7 @@
             [serviceDescription]="service.content.description"
             [serviceImage]="service.content.image"
             [index]="i"
-            [id]="service.id"
+            [id]="service.idAnnounce"
             [serviceDate]="service.content.datejour" >
           </app-service>
           </div>
@@ -69,7 +69,7 @@
             [serviceDescription]="service.content.description"
             [serviceImage]="service.content.image"
             [index]="i"
-            [id]="service.id"
+            [id]="service.idAnnounce"
             [serviceDate]="service.content.datejour" >
           </app-service>
           </div>
