--- a/pfirst/src/app/info-settings/info-settings.component.html
+++ b/pfirst/src/app/info-settings/info-settings.component.html
@@ -105,7 +105,7 @@
             <div class="form-group">
               <div class="jumbotron" id="formulaire" style="width: 400px">
                 <label for="formerPassword">Mot de passe actuel</label>
-                <input type="text" class="form-control" id="formerPassword" name="formerPassword"
+                <input type="password" class="form-control" id="formerPassword" name="formerPassword"
                        ngModel>
                 <span class="current-info-indicator">{{this.email}}</span>
               </div>
