Environnement pour Nombre de vu sur cuisine OK #21

--- a/pfirst/src/app/cuisine-single/cuisine-single.component.html
+++ b/pfirst/src/app/cuisine-single/cuisine-single.component.html
@@ -12,7 +12,7 @@
 
 
 
-
+<!-- #####ANNONCE##### -->
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <table align="center" cellpadding="20">
@@ -38,26 +38,27 @@
         <td><h2>Commentaire</h2>{{Description}}</td>
       </tr>
     </table>
+
+    <!-- ###FOOTER ANNONCE### -->
     <div class="text-right">
       <a  class="btn btn-primary" routerLink="/propose">Retour à la liste</a>
     </div>
   </div>
 
   <table align="center">
-    <button id="button_rendre" type="button" class="btn btn-warning">Aider {{User}} !</button>
+    <tr><button id="button_rendre" type="button" class="btn btn-warning">Aider {{User}} !</button></tr>
+    <tr>
+      <!--#####NOMBRES DE VUES####-->
+      <div id="view" style="position: absolute;left: 500px;">
+        <td>
+          <img style="width:50px" id="viewPic" src="../../assets/data/view.png" alt="">
+        </td>
+        <td><span style="font-size: 25px">{{View}}</span></td>
+      </div>
+    </tr>
   </table>
 
-  <!--#####NOMBRES DE VUES####-->
-  <div id="view">
-    <img style="width:50px;
-    position:absolute;
-    left:200px;"
-         id="viewPic" src="../../assets/data/view.png" alt="">
-    <span style="position: absolute;
-                 left:265px;
-                 bottom: 713px;
-                 font-size: 25px">{{View}}</span>
-  </div>
+
 
 </div>
 
