Réglage d'un bug d'accès au profil #21

--- a/pfirst/src/app/menage-single/menage-single.component.html
+++ b/pfirst/src/app/menage-single/menage-single.component.html
@@ -4,7 +4,8 @@
   </tr>
   <tr>
     <td>
-      <button type="button" class="btn btn-info" (click)="goProfil()" )>Voir le profil</button>
+      <button type="button" class="btn btn-info" (click)="goProfil('profil/'+this.service_descriptor.idUser)" )>
+        Voir le profil</button>
       <!-- <button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button> -->
     </td>
   </tr>
