Affichage de ménage OK #21

--- a/pfirst/src/app/menage-single/menage-single.component.html
+++ b/pfirst/src/app/menage-single/menage-single.component.html
@@ -4,14 +4,12 @@
   </tr>
   <tr>
     <td>
-      <button type="button" class="btn btn-info" (click)="goProfil('profil/'+this.service_descriptor.idUser)" )>
+      <button type="button" class="btn btn-info" (click)="goProfil('profil/'+this.service_descriptor.idUser)">
         Voir le profil</button>
       <!-- <button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button> -->
     </td>
   </tr>
 </table>
-
-
 
 
 <div class="jumbotron jumbotron-fluid">
