--- a/pfirst/src/app/cuisine-single/cuisine-single.component.html
+++ b/pfirst/src/app/cuisine-single/cuisine-single.component.html
@@ -10,7 +10,8 @@
   <tr><h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
   </tr>
   <tr>
-    <button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button>
+    <button type="button" class="btn btn-info" (click)="goProfil('profil/'+this.service_descriptor.idUser)">
+      Voir le profil</button>
     <!-- <button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button> -->
 
   </tr>
@@ -18,7 +19,7 @@
 
 
 
-
+<!-- #####ANNONCE##### -->
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <table align="center" cellpadding="20">
@@ -44,6 +45,8 @@
         <td><h2>Commentaire</h2>{{Description}}</td>
       </tr>
     </table>
+
+    <!-- ###FOOTER ANNONCE### -->
     <div class="text-right">
       <a  class="btn btn-primary" routerLink="/propose">Retour à la liste</a>
     </div>
