--- a/pfirst/src/app/courses-single/courses-single.component.html
+++ b/pfirst/src/app/courses-single/courses-single.component.html
@@ -1,3 +1,10 @@
+<div *ngIf="applied" class="alert alert-dismissable alert-success">
+  <table align="center">
+    Votre demande d'aide a bien été envoyé à <b>{{User}}</b>, attendez son acceptation.
+  </table>
+</div>
+<br>
+
 <br>
 <table align="center">
   <tr><h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
@@ -57,8 +64,15 @@
     </div>
   </div>
 
+  <!-- PROPOSER SON AIDE -->
   <table align="center">
-    <tr><button id="button_rendre" type="button" class="btn btn-warning">Aider {{User}} !</button></tr>
+    <tr>
+      <button *ngIf="!applied" id="button_rendre" type="button" class="btn btn-warning" (click)="applyCourses()">
+        <p style="font-size: larger">Aider {{User}} !</p></button>
+
+      <button *ngIf="applied" [disabled]="true" id="button_rendre" type="button" class="btn btn-warning" (click)="applyCourses()">
+        <p style="font-size: larger">Vous avez proposé votre aide.</p>
+      </button>    </tr>
     <tr>
       <!--#####NOMBRES DE VUES####-->
       <div id="view" style="position: absolute;left: 500px;">
