Page d'accueil ajout présentation du site

--- a/pfirst/src/app/app-view/app-view.component.html
+++ b/pfirst/src/app/app-view/app-view.component.html
@@ -1,7 +1,7 @@
 
 <div class="jumbotron text-center">
-  <h1 class="display-4 text-white">"Un peu d'aide fait grand bien"</h1>
-  <h2 class="text-white">Dès maintenant, aide les personnes dans le besoin près de toi.</h2>
+  <h2 class="display-4 text-white">"Un peu d'aide fait grand bien"</h2>
+  <h3 class="text-white">Dès maintenant, aide les personnes dans le besoin près de toi.</h3>
   <table cellpadding="10px" align="center" id="buttons_action">
     <div id="buttons_services">
       <tr>
@@ -23,16 +23,38 @@
 
 
 <!-- INEED C'EST QUOI ?-->
-<img id="IneedCQ" src="../../assets/data/ACCUEIL/ineedCQ.png" alt="">
-<img id="pile" src="../../assets/data/ACCUEIL/pile.png" alt="">
-<img id="sep" src="../../assets/data/ACCUEIL/separ.png" alt="">
-<p id="textIn"> Autre absurdité, renouvelée du stoïcisme, et tous deux perpétuaient leur plaisanterie. Sapristi, en voilà déjà un de mort. Chouette journée pour une petite gueuse ; et quant à ce que je compris que j'avais remarquée.</p>
+<table align="center" cellpadding="80">
+  <tr>
+    <td valign="top">
+      <table>
+        <tr>
+          <td><img id="IneedCQ" src="../../assets/data/ACCUEIL/ineedCQ.png" alt=""></td>
+        </tr>
+        <tr>
+          <p id="textIn"> Autre absurdité, renouvelée du stoïcisme, et tous deux perpétuaient leur plaisanterie. Sapristi, en voilà déjà un de mort. Chouette journée pour une petite gueuse ; et quant à ce que je compris que j'avais remarquée.</p>
+        </tr>
+      </table>
+    </td>
+    <td align="right">
+      <img id="pile" src="../../assets/data/ACCUEIL/pile.png" alt="">
+    </td>
+  </tr>
+</table>
 
-<!-- AIDER QLQ -->
+<!-- SEPARATE-->
+<table align="center">
+  <tr>
+    <img id="sep" src="../../assets/data/ACCUEIL/separ.png" alt="">
+  </tr>
+</table>
+
+
+
+<!-- AIDER QLQ
 <img id="tuveux" src="../../assets/data/ACCUEIL/tuVeux.png" alt="">
 <img id="jetCourse" src="../../assets/data/ACCUEIL/jetonCourse.png" alt="">
 <p id="aBesoin"><b>Gabriel a besoin de toi !</b></p>
 <p id="textTV"> Autre absurdité, renouvelée du stoïcisme, et tous deux perpétuaient leur plaisanterie. Sapristi, en voilà déjà un de mort. Chouette journée pour une petite gueuse ; et quant à ce que je compris que j'avais remarquée.</p>
 
-<div id="space">.</div>
+<div id="space">.</div> -->
 
